update first time

--- a/pages/ds_page/ds_index.css
+++ b/pages/ds_page/ds_index.css
@@ -46,7 +46,7 @@ body{
 
 .right_container{
     position: relative;
-    width: 70%;
+    width: 75%;
     height: 750px;
     background-color: rgba(51, 51, 51, 0.8);
     display: flex;
@@ -60,7 +60,7 @@ body{
 .right_present_professional,
 .right_present_research,
 .right_present_inschool,
-.right_present_kaggle {
+.right_present_competition {
     position: absolute;
     top: 30px;
     left: 50px;
@@ -76,7 +76,7 @@ body{
 .right_present_professional.active,
 .right_present_research.active,
 .right_present_inschool.active,
-.right_present_kaggle.active {
+.right_present_comptition.active {
     display: block;
 }
 
@@ -87,19 +87,19 @@ body{
 }
 
 .card h1{
-    font-size: 32px;
+    font-size: 24px;
     font-weight: 400;
     margin-top: 10px;
 }
 
 .card h2{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 200;
     margin-bottom: 20px;
 }
 
 .card p{
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 200;
     margin-bottom: 25px;
 }
