--- a/pages/ds_page/ds_index.css
+++ b/pages/ds_page/ds_index.css
@@ -13,6 +13,7 @@ body{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    font-family: Arial, sans-serif; /* Add this line */
     /* flex-direction: column; */
   }
 
@@ -36,6 +37,7 @@ body{
     color: #fff;
     text-align: center;
     cursor: pointer;
+    font-family: Arial, sans-serif; /* Add this line */
     transition: background-color 0.3s ease; /* Adding a smooth transition effect on hover */
 }
 
@@ -87,21 +89,24 @@ body{
 }
 
 .card h1{
-    font-size: 24px;
+    font-size: 27px;
     font-weight: 400;
     margin-top: 10px;
+    font-family: 'Times New Roman', Times, serif; /* Add this line */
 }
 
 .card h2{
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 200;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 25px;
 }
 
 .card p{
-    font-size: 14px;
-    font-weight: 200;
-    margin-bottom: 25px;
+    font-size: 17px;
+    font-weight: 100;
+    margin-bottom: 30px;
+    font-family:  'Times New Roman', Times, serif; /* Add this line */
 }
 
 .stacking_img {
